--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "cyperssmk",
+  "name": "cypress-19",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "e2e": "./node_modules/.bin/cypress open"
+    "test": ".\\node_modules\\.bin\\cypress open"
   },
   "author": "",
   "license": "ISC",
