--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": ".\\node_modules\\.bin\\cypress open"
+    "test:headed": ".\\node_modules\\.bin\\cypress open",
+    "test:headless": ".\\node_modules\\.bin\\cypress run"
   },
   "author": "",
   "license": "ISC",
